# computer_club

./: CMakeLists.txt  README.md  calc_club.cpp  calc_club.h  file_reader.cpp  file_reader.h  main.cpp  test_file1.txt  test_file2.txt  test_file3.txt  test_file4.txt
tests/: test10.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
